# CSC4526-babysurvivor

./: README.md  class_diagram.pu
BabySurvivor/: .gitignore  CMakeLists.txt
BabySurvivor/mainLauncher/: CMakeLists.txt
BabySurvivor/resources/: Entity.json  Entity.json.orig  Player.json  Settings.json  Stage.json  playerStats.json
BabySurvivor/src/: BounceBordersMovingStrategy.cpp  BounceBordersMovingStrategy.h  CMakeLists.txt  Collectible.cpp  Collectible.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  FourCrossShootingStrategy.cpp  FourCrossShootingStrategy.h  Game.cpp  Game.cpp.orig  Game.h  Game.h.orig  GameMenu.cpp  GameMenu.h  LivingEntity.cpp  LivingEntity.cpp.orig  LivingEntity.h  LivingEntity.h.orig  MovingStrategy.h  OneSimpleShootingStrategy.cpp  OneSimpleShootingStrategy.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  ShootingStrategy.h  SoundManager.cpp  SoundManager.h  Stage.cpp  Stage.h  Stats.cpp  Stats.h  ThreeSimpleShootingStrategy.cpp  ThreeSimpleShootingStrategy.h  TowardPlayerMovingStrategy.cpp  TowardPlayerMovingStrategy.h  myMain.cpp
BabySurvivor/unitTests/: CMakeLists.txt  unitTests.cpp
